--- a/index.html
+++ b/index.html
@@ -1,27 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <link rel="stylesheet" href="assets/css/grid.css">
-  <link rel="stylesheet" href="assets/css/style.css">
-  <title>Rock Site</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
-  <link href="https://fonts.googleapis.com/css?family=Raleway:200,200i,300,300i,400,500,600,800,900" rel="stylesheet">
-</head>
-<body>
-<div class="container">
-  <div class="row">
-    <div class="col-12" id="cont">
-      <p>Start Bootstrap</p>
-</div>
-</div>
-
-<div class="container">
-<div class="row">
-  <div class="col-12" id="img1">
-    
-  </div>
-</div>
-</div>
-</body>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+    <link rel="stylesheet" href="assets/css/grid.css">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Raleway:200,200i,300,300i,400,500,600,800,900" rel="stylesheet">
+    <link rel="stylesheet" href="assets/font-awesome-4.7.0/css/font-awesome.css">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <title>Rock Site</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+    <link href="https://fonts.googleapis.com/css?family=Raleway:200,200i,300,300i,400,500,600,800,900" rel="stylesheet">
+  </head>
+  <body>
+    <div class="navbtn">
+      <!-- comienzo del header donde esta la barra de navegación -->
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+            <ul>
+              <span class="nnc">Start Bootstrap</span>
+              <span><i class="fa fa-bars" aria-hidden="true"></i></span>
+            </ul>
+            <ul>
+              <li class="stbts">Start Bootstrap</li>
+              <li>
+                <a class="contact" href="#">
+                Contact
+              </li>
+              <li><a class="services" href="#">Services</li>
+              <li><a class="about" href="#">About</li>
+              <li><a class="home" href="#">Home</li>
+              <li></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- fin de la barra de navegación -->
+    <div id="img1">
+      <p class="onepage">One Page Wonder</p>
+      <p class="willrock"> Will Rock Your Socks Off</p>
+    </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-6">
+          <div class="forthose">
+            For those about to rock...
+            <p class="ftx">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum quos voluptas est natus quia deserunt, debitis laudantium! Autem esse dolor, voluptas architecto mollitia perspiciatis, commodi minima, illum eligendi vero voluptatibus.</p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-6" id="imgs1"></div>
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-6" id="imgs2"></div>
+        <div class="col-6">
+          <div class="forthose">
+            We salute you!
+            <p class="ftx">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum quos voluptas est natus quia deserunt, debitis laudantium! Autem esse dolor, voluptas architecto mollitia perspiciatis, commodi minima, illum eligendi vero voluptatibus.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-6">
+          <div class="forthose">
+            Let there be rock!
+            <p class="ftx">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum quos voluptas est natus quia deserunt, debitis laudantium! Autem esse dolor, voluptas architecto mollitia perspiciatis, commodi minima, illum eligendi vero voluptatibus.</p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-6" id="imgs3"></div>
+        </div>
+      </div>
+    </div>
+    <div class="footer">
+      <!-- inicio footer -->
+      <p class="txtf">Copyright © Your Website 2017</p>
+    </div>
+    <!-- fin footer -->
+  </body>
 </html>
